# phonepages

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: codestyle.yaml
corporations/: admin.py  apps.py  factories.py  models.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
corporations/migrations/: 0001_initial.py  0002_auto_20210912_1143.py  0003_auto_20210912_1453.py  0004_auto_20210912_1718.py
infra/: develop.yaml  local.yaml
infra/.envs_example/: .django  .postgres  .postgres_local  django  posgres_local  postgres
phonebook/: settings.py
project-settings/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: develop.txt  production.txt
users/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: .env_example  createadmin.py  filldb.py
users/migrations/: 0001_initial.py  0002_auto_20210911_1812.py  0003_auto_20210912_0815.py
